# Snap-chutt-rewrite

./: Doxyfile  back-end.py  database.txt  interface.py  logo.py  main.py  menus.py  pyproject.toml  user.py  userDatabase.py
doxygen/html/: annotated.html  classes.html  classuser_1_1_user-members.html  classuser_1_1_user.html  classuser_database_1_1_user_database-members.html  classuser_database_1_1_user_database.html  dir_2b3413ad4112961153eea9dfd52777ac.html  dir_3ab10a0964fa8c8cd1ae063f15fb1e17.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_7da0c8013739e519aff942a9ca9feb14.html  dir_b7d691388e07f0b820f8a7faae80356e.html  dir_ba1802830d2d168945a78f5a73a26687.html  dir_c1860a3cb183a84d3d0befbb0a3916e1.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  namespaceinterface.html  namespacelogo.html  namespacemain.html  namespacemembers.html  namespacemembers_func.html  namespacemenus.html  namespaces.html
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+16 more)
doxygen/latex/: annotated.tex  classuser_1_1_user.tex  classuser_database_1_1_user_database.tex  namespaceinterface.tex  namespacelogo.tex  namespacemain.tex  namespacemenus.tex  namespaces.tex  refman.tex
