[tool.poetry]
name = "repl_python3_Snap-chutt-rewrite"
version = "0.1.0"
description = ""
authors = ["blueted2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
sortedcollections = "^2.1.0"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
